[tool.poetry]
name = "neumai-tools"
version = "0.0.17"
description = "Package containing helper tools for Neum AI."
authors = ["David de Matheu <david@tryneum.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://neum.ai"
repository = "https://github.com/NeumTry/neum-tools"
keywords = ["neumai", "ai tools", "data tools"]

[tool.poetry.dependencies]
python = "^3.10"
tiktoken = "0.4.0"
langchain = "0.0.335"
llama-index = "0.9.3"
openai = "1.2.4"
pandas = "2.1.0"
neumai = "^0.0.32"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
