[tool.poetry]
name = "neumai"
version = "0.0.6"
description = "Package containing connectors for Neum AI."
authors = ["David de Matheu <david@tryneum.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://neum.ai"
repository = "https://github.com/NeumTry/NeumAI"
keywords = ["neumai", "ai tools", "data tools"]

[tool.poetry.dependencies]
python = "^3.10"
tiktoken = "0.4.0"
langchain = "0.0.284"
openai = "0.28.0"
pandas = "2.1.0"
neumai-tools = "0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
