[tool.poetry]
name = "neumai"
version = "0.0.40"
description = "Package containing connectors for Neum AI."
authors = ["David de Matheu <david@tryneum.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://neum.ai"
repository = "https://github.com/NeumTry/NeumAI"
keywords = ["neumai", "ai tools", "data tools"]

[tool.poetry.dependencies]
python = "^3.10"
tiktoken = "0.4.0"
langchain = "0.0.335"
openai = "1.2.4"
pandas = "2.1.0"
pinecone-client = "2.2.2"
pydantic = "1.10.13"
requests = "2.31.0"
scikit-learn = "1.2.2"
scipy = "1.10.1"
tokenizers = "0.13.2"
transformers = "4.27.3"
pypdf = "3.9.1"
unstructured = "0.7.7"
starlette = "0.27.0"
replicate = "0.13.0"
azure-storage-blob = "12.19.0"
azure-identity = "1.15.0"
qdrant_client = "1.6.9"
weaviate-client = "3.25.3"
supabase = "2.0.3"
boto3 = "1.28.81"
beautifulsoup4 = "4.12.2"
vecs = "0.4.2"
singlestoredb = "0.9.1"
fastapi = ">0.98.0"
lancedb = "0.3.6"
pylance = "0.8.21"
marqo = "2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
